# boson

./: Cargo.toml
docs/Decision Log/: !Decision Record Template.md  !Decision_Tree.md  DR000001 - Memory Management Approach.md  DR000001_Execution_Target.md
src/: main.rs
src/cli/: mod.rs  parse.rs
src/compilation/: mod.rs
src/compilation/frontend/: mod.rs
src/compilation/frontend/lexical_analysis/: mod.rs  vocabulary.rs
src/compilation/frontend/semantic_analysis/: mod.rs
src/compilation/frontend/syntax_analysis/: ast.rs  grammar.lalrpop  mod.rs
src/parser/: grammar.pest  mod.rs
