[package]
name = "boson"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.2", default-features = false, features = [
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "unicode",
    "usage",
    "wrap_help",
] }
lalrpop-util = { version = "0.20.2", default-features = false, features = [
    "unicode",
] }
logos = { version = "0.14.0", default-features = false, features = [
    "export_derive",
] }
rayon = { version = "1.9.0", default-features = false, features = [] }
tokio = { version = "1.36.0", default-features = false, features = [
    "fs",
    "macros",
    "num_cpus",
    "sync",
    "rt-multi-thread",
    "tokio-macros",
] }

[build-dependencies]
lalrpop = { version = "0.20.2", default-features = false, features = [
    "unicode",
] }
